--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "deploy-commands": "node src/deploy-commands.js",
   },
   "dependencies": {
     "buttplug": "^3.2.2",
