--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 BOT_TOKEN="discord_bot_token_here"
 BOT_APPLICATION_ID="discord_application_id_here"
 DISCORD_GUILD_ID="discord_guild_id_here"
+
 BUTTPLUG_SERVER_URL="ws://127.0.0.1:12345"
+
+BOT_ADMINS_ROLE_ID="bot_admins_role_id_here"
