--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DISCORD_GUILD_ID="discord_guild_id_here"
 
 BUTTPLUG_SERVER_URL="ws://127.0.0.1:12345"
 
-BOT_ADMINS_ROLE_ID="bot_admins_role_id_here"
+BOT_ADMIN_ROLE_ID="bot_admins_role_id_here"
